--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "17lands-viewer",
+  "homepage": "https://poltergeist.github.io/17lands-viewer/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
